--- a/index.html
+++ b/index.html
@@ -7,9 +7,34 @@
     <link rel="stylesheet" href="./public/styles/style.css">
 </head>
 <body>
-    
-
-
+    <header>
+        <nav class="navbar fixed-top bg-dark p-3">
+            <div class="container-fluid d-flex justify-content-between">
+            <a class="navbar-brand" href="#">CBIENBON</a>
+            <div class="navbarText">
+                <a href="">Home</a>
+                <a href="">About</a>
+                <a href="">Menu</a>
+                <a href="">Events</a>
+                <a href="">Gallery</a>
+                <a href="">Chefs</a>
+                <a href="">Contact</a>
+            </div>
+            <a class="navbarText1" href="">BOOK A TABLE</a>
+            </div>
+        </nav> 
+        <section class="secHeader mt-5">
+            <div id="divHeader">
+                <p id="pHeader">Welcome to <span id="spanHeader">CBIENBON</span></p>
+                <p id="p1Header">Delivering greatfood for more than 18years</p>
+                <span><button>OUR MENU</button><button>BOOK A TABLE</button></span>
+            </div>
+            <div id="div2Header">
+                <!-- VIDEO -->
+            </div>
+        </section>
+    </header>
+ 
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
