--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar fixed-top bg-dark p-3">
+        <nav class="navbar fixed-top bg-dark p-2">
             <div class="container-fluid d-flex justify-content-between">
             <a class="navbar-brand" href="#">CBIENBON</a>
             <div class="navbarText">
@@ -20,17 +20,21 @@
                 <a href="">Chefs</a>
                 <a href="">Contact</a>
             </div>
-            <a class="navbarText1" href="">BOOK A TABLE</a>
+            <button class="navbarText1">BOOK A TABLE</button>
             </div>
         </nav> 
-        <section class="secHeader mt-5">
+        <section class="secHeader">
             <div id="divHeader">
                 <p id="pHeader">Welcome to <span id="spanHeader">CBIENBON</span></p>
-                <p id="p1Header">Delivering greatfood for more than 18years</p>
-                <span><button>OUR MENU</button><button>BOOK A TABLE</button></span>
+                <p id="p1Header">Delivering great food for more than 18 years!</p>
+                <span id="span1Header">
+                    <button id="btnHeader">OUR MENU</button>
+                    <button id="btnHeader">BOOK A TABLE</button>
+                </span>
             </div>
             <div id="div2Header">
                 <!-- VIDEO -->
+                <i class="fa-solid fa-play"></i>
             </div>
         </section>
     </header>
