--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
             </div>
         </section>
     </header>
+    <section class="section1">
+        
+
+    </section>
  
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
