fin text section1

--- a/index.html
+++ b/index.html
@@ -39,10 +39,31 @@
         </section>
     </header>
     <section class="section1">
-        
+        <div class="GrandeDiv1">
+            <div class="section1Text">
+                <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+                <p id="pItalicsec1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis quia a vero odit culpa dignissimos quos cupiditate neque magna.</p>
+                <p id="p1sec1">
+                    <i class="fa-solid fa-check"></i>
+                    &nbsp;Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+                <p id="p2sec1">
+                    <i class="fa-solid fa-check"></i>
+                    &nbsp;Duis aute irure dolor in reprehenderit in voluptate velit.
+                </p>
+                <p id="p3sec1">
+                    <i class="fa-solid fa-check"></i>
+                    &nbsp;Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duit aute irure dolor in reprehenderit in voluptate trideta storacalaprerda mastiro dolore eu fugiat nulla paratir
+                </p>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus facere nihil soluta nostrum labore ipsa cum alias porro minus tempore nobis, quaerat illum fugit ratione reiciendis? Vel, eos sapiente. Voluptatem, ipsam facilis! Aspernatur aperiam repudiandae dolorem!           
+                </p>
+            </div>
+            <div class="section1Img">
 
+            </div>
+        </div>
     </section>
- 
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
