--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section class="section1">
         <div class="GrandeDiv1">
             <div class="section1Text">
-                <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+                <h2>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h2>
                 <p id="pItalicsec1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis quia a vero odit culpa dignissimos quos cupiditate neque magna.</p>
                 <p id="p1sec1">
                     <i class="fa-solid fa-check"></i>
@@ -60,7 +60,8 @@
                 </p>
             </div>
             <div class="section1Img">
-
+                <div class="corner-border"></div>
+                <div class="corner-border1"></div>
             </div>
         </div>
     </section>
