travail sur section 2

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a class="navbar-brand" href="#">CBIENBON</a>
             <div class="navbarText">
                 <a href="">Home</a>
-                <a href="">About</a>
+                <a href="#About">About</a>
                 <a href="">Menu</a>
                 <a href="">Events</a>
                 <a href="">Gallery</a>
@@ -38,7 +38,7 @@
             </div>
         </section>
     </header>
-    <section class="section1">
+    <section id="About" class="section1">
         <div class="GrandeDiv1">
             <div class="section1Text">
                 <h2>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h2>
@@ -62,6 +62,29 @@
             <div class="section1Img">
                 <div class="corner-border"></div>
                 <div class="corner-border1"></div>
+            </div>
+        </div>
+    </section>
+    <section class="section2">
+        <div class="section2Titre">
+            <p class="texteSection2">WHY US <hr> </p>
+        </div>
+        <p class="titreSection2">Why Choose Our Restaurant</p>
+        <div id="CarteSection2">
+            <div id="carte1Section2">
+                <p id="p1Section2">01</p>
+                <p>Lorem Ipsum</p>
+                <p></p>
+            </div>
+            <div id="carte2Section2">
+                <p id="p1Section2">02</p>
+                <p>Repellat Nihil</p>
+                <p></p>
+            </div>
+            <div id="carte3Section2">
+                <p id="p1Section2">03</p>
+                <p>Ad ad velit qui</p>
+                <p></p>
             </div>
         </div>
     </section>
