fin de la section2

--- a/index.html
+++ b/index.html
@@ -73,18 +73,18 @@
         <div id="CarteSection2">
             <div id="carte1Section2">
                 <p id="p1Section2">01</p>
-                <p>Lorem Ipsum</p>
-                <p></p>
+                <p id="p2Section2">Lorem Ipsum</p>
+                <p id="p3Section2">Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat</p>
             </div>
             <div id="carte2Section2">
                 <p id="p1Section2">02</p>
-                <p>Repellat Nihil</p>
-                <p></p>
+                <p id="p2Section2">Repellat Nihil</p>
+                <p id="p3Section2">Dolorem est fugiat occaecati voluptate velit esse. Dicta veritatis dolor quod et vel dire leno para dest</p>
             </div>
             <div id="carte3Section2">
                 <p id="p1Section2">03</p>
-                <p>Ad ad velit qui</p>
-                <p></p>
+                <p id="p2Section2">Ad ad velit qui</p>
+                <p id="p3Section2">Molestiae officiis omnis illo asperiores. Aut doloribus vitae sunt debitis quo vel nam quis</p>
             </div>
         </div>
     </section>
