preparartion div section3

--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
             </div>
         </div>
     </section>
+    <section class="section3">
+        <div class="div1Section3">
+            <p class="texteSection3">MENU <hr> </p>
+            <p></p>
+        </div>
+    </section>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
