--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="navbarText">
                 <a href="">Home</a>
                 <a href="#About">About</a>
-                <a href="">Menu</a>
+                <a href="#Menu">Menu</a>
                 <a href="">Events</a>
                 <a href="">Gallery</a>
                 <a href="">Chefs</a>
@@ -88,11 +88,14 @@
             </div>
         </div>
     </section>
-    <section class="section3">
+    <section id="Menu" class="section3">
         <div class="div1Section3">
             <p class="texteSection3">MENU <hr> </p>
             <p></p>
         </div>
+    </section>
+    <section id="Event" class="section4">
+
     </section>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
