--- a/index.html
+++ b/index.html
@@ -95,7 +95,26 @@
         </div>
     </section>
     <section id="Event" class="section4">
-
+        <div>
+            <p>EVENTS</p>
+            <p>Organize Your Events in our Restaurant</p>
+        </div>
+        <div>
+            <div class="card mb-3" style="max-width:auto; background-color: transparent;">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img src="./public/assets/img/event-custom.jpg" class="img-fluid rounded-start" alt="...">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">Custom Parties</h5>
+                      <p class="card-price">$99</p>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                  </div>
+                </div>
+            </div>
+        </div>
     </section>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
