--- a/index.html
+++ b/index.html
@@ -33,8 +33,13 @@
                 </span>
             </div>
             <div id="div2Header">
-                <!-- VIDEO -->
-                <i class="fa-solid fa-play"></i>
+                <input type="checkbox" id="video-toggle">
+                <label for="video-toggle">
+                    <i class="fa-solid fa-play"></i>
+                </label>
+            </div>
+            <div id="video-container">
+                <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
             </div>
         </section>
     </header>
@@ -95,21 +100,25 @@
         </div>
     </section>
     <section id="Event" class="section4">
-        <div>
-            <p>EVENTS</p>
-            <p>Organize Your Events in our Restaurant</p>
+        <div id="divEvent">
+            <p id="titreSection4">EVENTS <hr> </p>
+            <p id="textSection4">Organize Your Events in our Restaurant</p>
         </div>
         <div>
             <div class="card mb-3" style="max-width:auto; background-color: transparent;">
                 <div class="row g-0">
-                  <div class="col-md-4">
-                    <img src="./public/assets/img/event-custom.jpg" class="img-fluid rounded-start" alt="...">
+                  <div class="col-md-6">
+                    <img id="imgEvent" style="height: 460px; width: 720px;" src="./public/assets/img/event-custom.jpg" class="img-fluid rounded-start" alt="...">
                   </div>
-                  <div class="col-md-8">
+                  <div class="col-md-6">
                     <div class="card-body">
                       <h5 class="card-title">Custom Parties</h5>
-                      <p class="card-price">$99</p>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-price">$99 </p>
+                      <p class="card-text"><i>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</i></p>
+                      <p>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                      <p>Duis aute irure dolor in reprehenderit in voluptate velit.</p>
+                      <p>Ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ipsum, expedita explicabo harum rem, facilis aut quos quasi facere, esse recusandae obcaecati illo cum? Excepturi.</p>
                     </div>
                   </div>
                 </div>
