--- a/index.html
+++ b/index.html
@@ -127,9 +127,11 @@
         </div>
     </section>
     <section class="section5">
-        <div id="divReservation">
-            <p>Reservation <hr> </p>
-            <p>Book a Table</p>
+        <div id="grandDiv5">
+            <div id="divReservation">
+                <p id="p1Reservation">Reservation <hr> </p>
+            </div>
+                <p id="p2Reservation">Book a Table</p>
         </div>
         <div id="FormReserv">
             <form id="booking-form">
