fin section5 forum

--- a/index.html
+++ b/index.html
@@ -137,35 +137,35 @@
             <form id="booking-form">
                 <div class="form-row d-flex">
                     <div class="form-group">
-                        <input type="text" id="firstName" name="Your Name" placeholder="First Name" required>
+                        <input type="text" id="firstName" name="Your Name" placeholder="&nbsp;First Name" required>
                     </div>
                     <div class="form-group">
-                        <input type="text" id="lastName" name="Your Email" placeholder="Your Email" required>
+                        <input type="text" id="lastName" name="Your Email" placeholder="&nbsp;Your Email" required>
                     </div>
                     <div class="form-group">
-                        <input type="text" id="lastName" name="Your phone" placeholder="Your Phone" required>
+                        <input type="text" id="phone" name="Your phone" placeholder="&nbsp;Your Phone" required>
                     </div>
                 </div>
                 
                 <div class="form-row d-flex">
                     <div class="form-group">
-                        <input type="date" id="date" name="Date" required>
+                        <input type="text" id="Date" name="Date" placeholder="&nbsp;Date" required>
                     </div>
                     <div class="form-group">
-                        <input type="time" id="time" name="Time" required>
+                        <input type="text" id="time" name="Time" placeholder="&nbsp;Time" required>
                     </div>
                     <div class="form-group">
-                        <input type="number" id="people" name="people" placeholder="# of people" min="1" required>
+                        <input type="number" id="people" name="people" placeholder="&nbsp;# of people" min="1" required>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group full-width">
-                        <textarea id="specialRequests" name="specialRequests" placeholder="Message"></textarea>
+                        <textarea id="MessageForm" name="specialRequests" placeholder="&nbsp;Message"></textarea>
                     </div>
                 </div>
                 
                 <div class="form-row d-flex justify-content-center">
-                    <button type="submit" class="submit-button">Book a Table</button>
+                    <button id="btnForm" type="submit" class="submit-button">Book a Table</button>
                 </div>
             </form>
         </div>
