--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
                     <i class="fa-solid fa-xmark"></i>
                 </button>
             </form>
-            <video controls>
-                <source src="https://www.youtube.com/watch?v=oUhWsKMcoKY&list=RDkd6Dx4SoGQ4&index=27" type="video/mp4">
-            </video>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/2H5kpKBmIM4?si=KGfY_Udg3hcDSnj-&amp;start=7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </dialog>
     </header>
     <section id="About" class="section1">
