--- a/index.html
+++ b/index.html
@@ -175,6 +175,9 @@
             </form>
         </div>
     </section>
+    <section class="section6">
+
+    </section>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
