ajout des tailles auto

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a href="#About">About</a>
                 <a href="#Menu">Menu</a>
                 <a href="#Event">Events</a>
-                <a href="">Gallery</a>
+                <a href="#Gallery">Gallery</a>
                 <a href="">Chefs</a>
                 <a href="">Contact</a>
             </div>
@@ -41,7 +41,7 @@
         </section>
         <dialog id="videoPopup">
             <form method="dialog">
-                <button class="close-button" aria-label="Fermer">
+                <button class="close-button" aria-label="Fermer"> 
                     <i class="fa-solid fa-xmark"></i>
                 </button>
             </form>
@@ -77,7 +77,7 @@
     </section>
     <section class="section2">
         <div class="section2Titre">
-            <p class="texteSection2">WHY US <hr> </p>
+            <p class="texteSection2">WHY US <hr> </p> <br>
         </div>
         <p class="titreSection2">Why Choose Our Restaurant</p>
         <div id="CarteSection2">
@@ -175,8 +175,23 @@
             </form>
         </div>
     </section>
-    <section class="section6">
+    <section id="Gallery" class="section6">
+        <div>
+            <div class="d-flex column" id="textSection6">
+                <p class="d-flex" id="p1Section6">GALLERY <hr></p>
+            </div>
+            <div>
+                <p id="p2Section6">Some photos from Our Restaurant</p>
+            </div>
+        </div>
+        <div>
+            <div>
 
+            </div>
+            <div>
+
+            </div>
+        </div>
     </section>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
