ajout photo section 6

--- a/index.html
+++ b/index.html
@@ -184,12 +184,18 @@
                 <p id="p2Section6">Some photos from Our Restaurant</p>
             </div>
         </div>
-        <div>
-            <div>
-
+        <div id="divImg">
+            <div id="div1Img">
+                <img id="imgGallery" src="./public/assets/img/gallery/gallery-1.jpg" alt="">
+                <img id="imgGallery" src="./public/assets/img/gallery/gallery-2.jpg" alt="">
+                <img id="imgGallery" src="./public/assets/img/gallery/gallery-3.jpg" alt="">
+                <img id="imgGallery" src="./public/assets/img/gallery/gallery-4.jpg" alt="">
             </div>
-            <div>
-
+            <div id="div2Img">
+                <img id="imgGallery" src="./public/assets/img/gallery/gallery-5.jpg" alt="">
+                <img id="imgGallery" src="./public/assets/img/gallery/gallery-6.jpg" alt="">
+                <img id="imgGallery" src="./public/assets/img/gallery/gallery-7.jpg" alt="">
+                <img id="imgGallery" src="./public/assets/img/gallery/gallery-8.jpg" alt="">
             </div>
         </div>
     </section>
