--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="#Menu">Menu</a>
                 <a href="#Event">Events</a>
                 <a href="#Gallery">Gallery</a>
-                <a href="">Chefs</a>
+                <a href="#Chef">Chefs</a>
                 <a href="">Contact</a>
             </div>
             <button class="navbarText1">BOOK A TABLE</button>
@@ -134,7 +134,7 @@
     <section class="section5">
         <div id="grandDiv5">
             <div id="divReservation">
-                <p id="p1Reservation">Reservation <hr> </p>
+                <p id="p1Reservation">RESERVATION<hr> </p>
             </div>
                 <p id="p2Reservation">Book a Table</p>
         </div>
@@ -199,6 +199,22 @@
             </div>
         </div>
     </section>
+    <section id="Chef" class="section7">
+        <div class="divSection7">
+            <div class="TextSection7">
+                <p class="p1Section7">CHEFS<hr> </p>
+            </div>
+            <div>
+                <p class="p2Section7">Our Professionnal Chefs</p>
+            </div>
+        </div>
+        <div class="ImgSection7">
+            <img id="imgS7" src="./public/assets/img/chefs/chefs-1.jpg" alt="">
+            <img id="imgS7" src="./public/assets/img/chefs/chefs-2.jpg" alt="">
+            <img id="imgS7" src="./public/assets/img/chefs/chefs-3.jpg" alt="">
+        </div>
+    </section>
+    
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
