--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="#Event">Events</a>
                 <a href="#Gallery">Gallery</a>
                 <a href="#Chef">Chefs</a>
-                <a href="">Contact</a>
+                <a href="#contact">Contact</a>
             </div>
             <button class="navbarText1">BOOK A TABLE</button>
             </div>
@@ -214,7 +214,24 @@
             <img id="imgS7" src="./public/assets/img/chefs/chefs-3.jpg" alt="">
         </div>
     </section>
-    
+    <section id="contact" class="section8">
+        <div>
+            <div id="textSection8" class="d-flex ps-2">
+                <p class="text-white fs-4">CONTACT <hr></p>
+            </div>
+                <p id="p2section8" class="display-3">Contact Us</p>
+        </div>
+        <div class="divGoogleMap">
+            <div id="google">
+
+            </div>
+            <div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+    </section>
+
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
