--- a/index.html
+++ b/index.html
@@ -268,6 +268,12 @@
             </div>
         </div>
     </section>
+    <section id="lien" class="section9">
+        <div id="lien1"></div>
+        <div id="lien2"></div>
+        <div id="lien3"></div>
+        <div id="lien4"></div>
+    </section>
 
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
