--- a/index.html
+++ b/index.html
@@ -274,7 +274,9 @@
         <div id="lien3"></div>
         <div id="lien4"></div>
     </section>
-
+    <footer>
+        
+    </footer>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
