--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 </label>
             </div>
         </section>
+        <!-- src : https://developer.mozilla.org/en-US/docs/Web/HTML/Element/dialog  -->
         <!-- la balise dialog permet a la vidéo d'être joué, faut insérer iFrame correctement sinon 0 resultat -->
         <dialog id="videoPopup">
             <form method="dialog">
@@ -211,9 +212,39 @@
             </div>
         </div>
         <div class="ImgSection7">
-            <img id="imgS7" src="./public/assets/img/chefs/chefs-1.jpg" alt="">
-            <img id="imgS7" src="./public/assets/img/chefs/chefs-2.jpg" alt="">
-            <img id="imgS7" src="./public/assets/img/chefs/chefs-3.jpg" alt="">
+            <div id="img1S7">
+                <p id="textChef1" class="text-center"><strong>Walter White<br></strong> 
+                <i>Master Chef</i>
+                <div class="text-center" id="logo">
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                </div>
+                </p>
+            </div>
+            <div id="img2S7">
+                <p id="textChef2" class="text-center"><strong>Sarah Johnson<br></strong>
+                Patissier
+                <div class="text-center"  id="logo">
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                </div>
+                </p>
+            </div>
+            <div id="img3S7">
+                <p id="textChef3" class="text-center"><strong>William Anderson<br></strong> 
+                <i>Chef</i>
+                <div class="text-center"  id="logo">
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                </div>
+                </p>
+            </div>
         </div>
     </section>
     <section id="contact" class="section8">
@@ -310,7 +341,9 @@
         </div>
     </section>
     <footer>
-
+        <p>
+            &copy; Copyright &ensp; <strong>CBIENBON. &ensp;</strong> All Rights Reserved
+        </p>
     </footer>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
