ajout effet section CHEF

--- a/index.html
+++ b/index.html
@@ -213,37 +213,43 @@
         </div>
         <div class="ImgSection7">
             <div id="img1S7">
-                <p id="textChef1" class="text-center"><strong>Walter White<br></strong> 
-                <i>Master Chef</i>
-                <div class="text-center" id="logo">
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
+                <div id="textS7">
+                    <p id="textChef1" class="text-center"><strong>Walter White<br></strong> 
+                    <i>Master Chef</i>
+                    <div class="text-center" id="logo">
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-linkedin"></i>
+                    </div>
+                    </p>
                 </div>
-                </p>
             </div>
             <div id="img2S7">
-                <p id="textChef2" class="text-center"><strong>Sarah Johnson<br></strong>
-                Patissier
-                <div class="text-center"  id="logo">
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
+                <div id="textS7">
+                    <p id="textChef2" class="text-center"><strong>Sarah Johnson<br></strong>
+                    <i>Patissier</i>
+                    <div class="text-center"  id="logo">
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-linkedin"></i>
+                    </div>
+                    </p>
                 </div>
-                </p>
             </div>
             <div id="img3S7">
-                <p id="textChef3" class="text-center"><strong>William Anderson<br></strong> 
-                <i>Chef</i>
-                <div class="text-center"  id="logo">
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
+                <div id="textS7">
+                    <p id="textChef3" class="text-center"><strong>William Anderson<br></strong> 
+                    <i>Chef</i>
+                    <div class="text-center"  id="logo">
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-linkedin"></i>
+                    </div>
+                    </p>
                 </div>
-                </p>
             </div>
         </div>
     </section>
