ajout du bouton retour en haut

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
             <div class="container-fluid d-flex justify-content-between">
             <a class="navbar-brand" href="#">CBIENBON</a>
             <div class="navbarText">
-                <a href="">Home</a>
-                <a href="#About">About</a>
-                <a href="#Menu">Menu</a>
-                <a href="#Event">Events</a>
-                <a href="#Gallery">Gallery</a>
-                <a href="#Chef">Chefs</a>
-                <a href="#contact">Contact</a>
+                <a id="Home" href="#Home">Home</a>
+                <a id="about" href="#About">About</a>
+                <a id="menu" href="#Menu">Menu</a>
+                <a id="event" href="#Event">Events</a>
+                <a id="gallery" href="#Gallery">Gallery</a>
+                <a id="chef" href="#Chef">Chefs</a>
+                <a id="contacts" href="#contact">Contact</a>
             </div>
             <button class="navbarText1">BOOK A TABLE</button>
             </div>
         </nav> 
-        <section class="secHeader">
+        <section id="haut" class="secHeader">
             <div id="divHeader">
                 <p id="pHeader">Welcome to <span id="spanHeader">CBIENBON</span></p>
                 <p id="p1Header">Delivering great food for more than 18 years!</p>
@@ -351,6 +351,7 @@
             &copy; Copyright &ensp; <strong>CBIENBON. &ensp;</strong> All Rights Reserved
         </p>
     </footer>
+    <a href="#haut"><i id="arrow" class="fa-solid fa-arrow-up"></i></a>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
