--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
         <nav class="navbar fixed-top bg-dark p-2">
             <div class="container-fluid d-flex justify-content-between">
-            <a class="navbar-brand" href="#">CBIENBON</a>
-            <div class="navbarText">
+              <a class="navbar-brand" href="#">CBIENBON</a>
+              <div class="navbarText">
                 <a id="Home" href="#Home">Home</a>
                 <a id="about" href="#About">About</a>
                 <a id="menu" href="#Menu">Menu</a>
@@ -19,10 +19,44 @@
                 <a id="gallery" href="#Gallery">Gallery</a>
                 <a id="chef" href="#Chef">Chefs</a>
                 <a id="contacts" href="#contact">Contact</a>
+              </div>
+              <button class="navbarText1">BOOK A TABLE</button>
             </div>
-            <button class="navbarText1">BOOK A TABLE</button>
+          </nav>
+          <!-- <nav class="navbar fixed-top bg-dark p-2">
+            <div class="container-fluid d-flex justify-content-between">
+              <a class="navbar-brand" href="#">CBIENBON</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbarText d-flex justify-content-center">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#Home">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#About">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Menu">Menu</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Event">Events</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Gallery">Gallery</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Chef">Chefs</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#contact">Contacts</a>
+                  </li>
+                </ul>
+                <button class="navbarText1">BOOK A TABLE</button>
+              </div>
             </div>
-        </nav> 
+          </nav> -->
         <section id="haut" class="secHeader">
             <div id="divHeader">
                 <p id="pHeader">Welcome to <span id="spanHeader">CBIENBON</span></p>
