correction du formulaire

--- a/index.html
+++ b/index.html
@@ -383,25 +383,25 @@
             <form id="booking-form">
                 <div class="form-row d-flex">
                     <div class="form-group">
-                        <input type="text" id="firstName" name="Your Name" placeholder="&nbsp;First Name" required>
+                        <textarea type="text" id="firstName" name="Your Name" placeholder="&nbsp;First Name" required></textarea>
                     </div>
                     <div class="form-group">
-                        <input type="text" id="lastName" name="Your Email" placeholder="&nbsp;Your Email" required>
+                        <textarea type="text" id="lastName" name="Your Email" placeholder="&nbsp;Your Email" required></textarea>
                     </div>
                     <div class="form-group">
-                        <input type="text" id="phone" name="Your phone" placeholder="&nbsp;Your Phone" required>
+                        <textarea type="text" id="phone" name="Your phone" placeholder="&nbsp;Your Phone" required></textarea>
                     </div>
                 </div>
                 
                 <div class="form-row d-flex">
                     <div class="form-group">
-                        <input type="text" id="Date" name="Date" placeholder="&nbsp;Date" required>
+                        <textarea type="text" id="Date" name="Date" placeholder="&nbsp;Date" required></textarea>
                     </div>
                     <div class="form-group">
-                        <input type="text" id="time" name="Time" placeholder="&nbsp;Time" required>
+                        <textarea type="text" id="time" name="Time" placeholder="&nbsp;Time" required></textarea>
                     </div>
                     <div class="form-group">
-                        <input type="number" id="people" name="people" placeholder="&nbsp;# of people" min="1" required>
+                        <textarea type="number" id="people" name="people" placeholder="&nbsp;# of people" min="1" required></textarea>
                     </div>
                 </div>
                 <div class="form-row">
@@ -530,11 +530,11 @@
                 <div class="contact-form">
                     <form>
                         <div class="form-row">
-                            <input id="text" type="text" placeholder="&ensp;&ensp;Your Name" required>
-                            <input id="email" type="email" placeholder="&ensp;&ensp;Your Email" required>
+                            <textarea id="text" type="text" placeholder="&ensp;&ensp;Your Name" required></textarea>
+                            <textarea id="email" type="email" placeholder="&ensp;&ensp;Your Email" required></textarea>
                         </div>
                         <div>
-                            <input id="subject" type="text" placeholder="&ensp;&ensp;Subject">
+                            <textarea id="subject" type="text" placeholder="&ensp;&ensp;Subject"></textarea>
                         </div>
                         <div>
                             <textarea id="msg" placeholder="&ensp;&ensp;Message"></textarea>
