--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <i class="fa-solid fa-check"></i>
                     &nbsp;Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duit aute irure dolor in reprehenderit in voluptate trideta storacalaprerda mastiro dolore eu fugiat nulla paratir
                 </p>
-                <p>
+                <p id="p4sec1">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus facere nihil soluta nostrum labore ipsa cum alias porro minus tempore nobis, quaerat illum fugit ratione reiciendis? Vel, eos sapiente. Voluptatem, ipsam facilis!          
                 </p>
             </div>
